--- a/.htaccess
+++ b/.htaccess
@@ -2,11 +2,11 @@
 # no caso automatizei para ir apenas a uma pá-
 # gina levando os dados de erro por método GET
 
-ErrorDocument 400 /meme/errors/recebe-erros.php?q=400
-ErrorDocument 401 /meme/errors/recebe-erros.php?q=401
-ErrorDocument 403 /meme/errors/recebe-erros.php?q=403
-ErrorDocument 404 /meme/errors/recebe-erros.php?q=404
-ErrorDocument 500 /meme/errors/recebe-erros.php?q=500
+ErrorDocument 400 /errors/recebe-erros.php?q=400
+ErrorDocument 401 /errors/recebe-erros.php?q=401
+ErrorDocument 403 /errors/recebe-erros.php?q=403
+ErrorDocument 404 /errors/recebe-erros.php?q=404
+ErrorDocument 500 /errors/recebe-erros.php?q=500
 
 # impedindo o acesso a este arquivo
 <files ~ "^.*\.([Hh][Tt][Aa][Cc][Cc][Ee][Ss][Ss])">
